--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "start:server": "node ./json-server/index.js"
+    "start:server": "node ./json-server/index.js",
+    "start:dev": "concurrently \"npm run dev\" \"npm run start:server\""
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.2",
+    "concurrently": "^9.1.2",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
