--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.2",
     "concurrently": "^9.1.2",
+    "i18next": "^24.2.3",
     "next": "15.2.0",
+    "next-i18next": "^15.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "react-redux": "^9.2.0",
     "swiper": "^11.2.5"
   },
