--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@headlessui/react": "^2.2.2",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.2",
     "concurrently": "^9.1.2",
